--- a/templates/deletelanguage.html
+++ b/templates/deletelanguage.html
@@ -5,8 +5,8 @@
     <title>Delete a language</title>
   </head>
   <body>
-    <h1>Are you sure you want to delete {{languages[language_id]['name']}} language?</h1>
-    <form action = '{{url_for('deleteLanguage', family_id=family_id, language_id=language_id)}}' method ='POST'>
+    <h1>Are you sure you want to delete {{language['name']}} language?</h1>
+    <form action = '{{url_for('deleteLanguage', family_id=family_id, language_id=language['id'])}}' method ='POST'>
       <input type='submit' value='Yes'>
       <br><br>
     </form>
