--- a/templates/editfamily.html
+++ b/templates/editfamily.html
@@ -5,8 +5,8 @@
     <title>Delete a language family</title>
   </head>
   <body>
-    <h1>Here you can edit the {{language_families[family_id]['name']}} language family.</h1>
-    <form action='{{url_for('deleteLanguageFamily', family_id=family_id)}}' method ='POST'>
+    <h1>Here you can edit the {{family['name']}} language family.</h1>
+    <form action='{{url_for('deleteLanguageFamily', family_id=family['id'])}}' method ='POST'>
       <input type='text' placeholder='name'>
       <input type='submit' value='Submit'>
       <br><br>
