--- a/templates/language.html
+++ b/templates/language.html
@@ -2,21 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Learn more about {{languages[language_id]['name']}} language</title>
+    <title>Learn more about {{language['name']}} language</title>
   </head>
   <body>
     <a href='{{url_for('showLanguageFamily', family_id=family_id)}}'>Back to language family page</a>
     <header>
-      <p>{{languages[language_id]['description']}}</p>
+      <p>{{language['description']}}</p>
     </header>
     <section id="language-trivia">
-      {% for trivium in languages[language_id]['trivia'] %}
+      {% for trivium in trivia %}
       <p>{{trivium['text']}}</p>
       {% endfor %}
-      {% for tip in languages[language_id]['tips'] %}
+      {% for tip in tips %}
       <p>{{tip['text']}}</p>
       {% endfor %}
-      {% for resource in languages[language_id]['learning-resources'] %}
+      {% for resource in resources %}
       <p>{{resource['text']}}</p>
       {% endfor %}
     </section>
