--- a/templates/editlanguage.html
+++ b/templates/editlanguage.html
@@ -7,7 +7,10 @@
   <body>
     <h1>Here you can edit {{language['name']}} language.</h1>
     <form action='{{url_for('editLanguage', family_id=family_id, language_id=language['id'])}}' method ='POST'>
-      <input type='text' placeholder='name'>
+      <input type='text' name='name' placeholder='name'>
+      <br>
+      <textarea name='description' placeholder='Tell us something interesting'></textarea>
+      <br>
       <input type='submit' value='Submit'>
       <br><br>
     </form>
