--- a/templates/addlanguage.html
+++ b/templates/addlanguage.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <title>Add a new language</title>
   </head>
   <body>
@@ -10,6 +14,10 @@
       <input type='text' name='name' placeholder='name'>
       <br>
       <textarea name='description' placeholder='Introduce the language'></textarea>
+      <br>
+      <input type='text' name='trivium' placeholder='Tell us a fun fact'>
+      <br>
+      <input type='text' name='tip' placeholder='Any learning tips?'>
       <br>
       <input type='submit' value='Submit'>
       <br><br>
