--- a/templates/language.html
+++ b/templates/language.html
@@ -2,24 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <title>Learn more about {{language['name']}} language</title>
   </head>
   <body>
-    <a href='{{url_for('showLanguageFamily', family_id=family_id)}}'>Back to language family page</a>
-    <header>
-      <p>{{language['description']}}</p>
-    </header>
-    <section id="language-trivia">
-      {% for trivium in trivia %}
-      <p>{{trivium['text']}}</p>
-      {% endfor %}
-      {% for tip in tips %}
-      <p>{{tip['text']}}</p>
-      {% endfor %}
-      {% for resource in resources %}
-      <p>{{resource['text']}}</p>
-      {% endfor %}
-    </section>
-
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="/login">Login</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Welcome, {{user_name}}</h3>
+      </div>
+      <div class="jumbotron">
+        <a href='{{url_for('showLanguageFamily', family_id=family_id)}}'>Back to language family page</a>
+        <header>
+          <p>{{language['description']}}</p>
+        </header>
+        <section id="language-trivia">
+          <div class="col-lg-6">
+            <h3>Fun facts about {{language['name']}}</h3>
+            {% for trivium in trivia %}
+            <p>{{trivium['text']}}</p>
+            {% endfor %}
+            <h3>Learning tips</h3>
+            {% for tip in tips %}
+            <p>{{tip['text']}}</p>
+            {% endfor %}
+            <h3>Learning resources</h3>
+            <p></p>
+          </div>
+        </section>
+      </div>
+    </div>
+    <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
   </body>
 </html>
