--- a/templates/editfamily.html
+++ b/templates/editfamily.html
@@ -2,19 +2,48 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <title>Edit a language family</title>
   </head>
   <body>
-    <h1>Here you can edit the {{family['name']}} language family.</h1>
-    <form action='{{url_for('editLanguageFamily', family_id=family['id'])}}' method ='POST'>
-      <input type='text' name='name' placeholder='name'>
-      <br>
-      <textarea name='description' placeholder='Tell us something interesting'></textarea>
-      <br>
-      <input type='submit' value='Submit'>
-      <br><br>
-    </form>
-    <a href='{{url_for('showMainPage')}}'>Go back to main page</a>
-  </body>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              {% if user_name == 'Guest' %}
+              <a class="nav-link active" href="/login">Login</a>
+              {% else %}
+              <a class="nav-link active" href="/gdisconnect">Logout</a>
+              {% endif %}
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Welcome, {{user_name}}</h3>
+      </div>
 
+      <div class="jumbotron">
+        <div class="col-md-6 offset-md-3">
+          <h1 class="text-center">Here you can edit the {{family['name']}} language family.</h1><br/>
+          <form action='{{url_for('editLanguageFamily', family_id=family['id'])}}' method ='POST'>
+            <div class="form-group">
+              <label for='name'>Name</label>
+              <input type='text' class='form-control' name='name' id='name' placeholder='e.g. Ugro-Finnic'>
+            </div>
+            <div class="form-group">
+              <label for='description'>Description</label>
+              <textarea class='form-control' name='description' placeholder='Tell us something interesting'></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form><br/>
+          <a href='{{url_for('showMainPage')}}'>Go back to main page</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
