--- a/templates/language-family.html
+++ b/templates/language-family.html
@@ -2,28 +2,62 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <title>Learn more about {{family['name']}} languages</title>
   </head>
   <body>
-    <a href='{{url_for('showMainPage')}}'>Back to main page</a>
-    <header>
-      <p>{{family['description']}}</p>
-    </header>
-    <section id="languages">
-      <ul>
-      {% for language in languages %}
-      <li><a href='{{url_for('showLanguage', family_id=family['id'], language_id=language['id'])}}'>{{language['name']}}</a></li>
-        <ul>
-          <li><a href='{{url_for('editLanguage', family_id=family['id'], language_id=language['id'])}}'>Edit this language</a></li>
-          <li><a href='{{url_for('deleteLanguage', family_id=family['id'], language_id=language['id'])}}'>Delete this language</a></li>
-        </ul>
-      {% endfor %}
-    </ul>
-    </section>
-    <a href='{{url_for('addLanguage', family_id=family['id'])}}'>Add new language</a>
-    <br><br>
-    <a href='{{url_for('editLanguageFamily', family_id=family['id'])}}'>Edit this language family</a>
-    <br>
-    <a href='{{url_for('deleteLanguageFamily', family_id=family['id'])}}'>Delete this language family</a>
+    <div class="container">
+      <div class="navbar navbar-light bg-faded">
+        <div class="header clearfix">
+          <nav>
+            <ul class="nav nav-pills float-right">
+              <li class="nav-item">
+                {% if user_name == 'Guest' %}
+                <a class="nav-link active" href="/login">Login</a>
+                {% else %}
+                <a class="nav-link active" href="/gdisconnect">Logout</a>
+                {% endif %}
+              </li>
+            </ul>
+          </nav>
+          <h3 class="text-muted">Welcome, {{user_name}}</h3>
+        </div>
+      </div>
+
+      <div class="jumbotron">
+        <a href='{{url_for('showMainPage')}}'>Back to main page</a>
+        <div class="col-md-6 offset-md-3">
+          <h1 class="text-center">{{family['description']}}</h1>
+          <section id="languages">
+                {% for language in languages %}
+                <div class="card text-center">
+                  <div class="card-block">
+                  <h4 class="card-title"><a href='{{url_for('showLanguage', family_id=family['id'], language_id=language['id'])}}'>{{language['name']}}</a></h4>
+                    <a class="card-link btn btn-secondary" href='{{url_for('editLanguage', family_id=family['id'], language_id=language['id'])}}'>Edit language</a>
+                    <a class="card-link btn btn-danger" href='{{url_for('deleteLanguage', family_id=family['id'], language_id=language['id'])}}'>Delete language</a>
+                  </div>
+                </div>
+                {% endfor %}
+          </section>
+          <section id="options">
+            <div class="dropdown show">
+              <a class="btn btn-secondary dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
+                Options
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="{{url_for('addLanguage', family_id=family['id'])}}">Add new language</a>
+                <a class="dropdown-item" href="{{url_for('editLanguageFamily', family_id=family['id'])}}">Edit this language family</a>
+                <a class="dropdown-item" href="{{url_for('deleteLanguageFamily', family_id=family['id'])}}">Delete this language family</a>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
