--- a/templates/language.html
+++ b/templates/language.html
@@ -12,35 +12,49 @@
   </head>
   <body>
     <div class="container">
+      <div class="navbar navbar-light bg-faded">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills float-right">
             <li class="nav-item">
+              {% if user_name == 'Guest' %}
               <a class="nav-link active" href="/login">Login</a>
+              {% else %}
+              <a class="nav-link active" href="/gdisconnect">Logout</a>
+              {% endif %}
             </li>
           </ul>
         </nav>
         <h3 class="text-muted">Welcome, {{user_name}}</h3>
       </div>
+    </div>
       <div class="jumbotron">
         <a href='{{url_for('showLanguageFamily', family_id=family_id)}}'>Back to language family page</a>
         <header>
           <p>{{language['description']}}</p>
         </header>
         <section id="language-trivia">
-          <div class="col-lg-6">
+        <div class="row">
+          <div class="col-md-6">
             <h3 id="funFactsTitle">Fun facts about {{language['name']}}</h3>
             {% for trivium in trivia %}
-            <p>{{trivium['text']}}</p>
-            {% endfor %}
+            <div class="card">
+              <div class="card-block">{{trivium['text']}}</div>
+            </div><br/>
+            {% endfor %}<br/>
             <h3>Learning tips</h3>
             {% for tip in tips %}
-            <p>{{tip['text']}}</p>
+            <div class="card">
+              <div class="card-block">{{tip['text']}}</div>
+            </div>
             {% endfor %}
+          </div>
+          <div class="col-md-6">
             <h3>Learning resources</h3>
             <ul id="languageResources">
             </ul>
           </div>
+        </div>
         </section>
       </div>
     </div>
