--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,86 @@
   <head>
     <meta charset="utf-8">
     <title>Language App - login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
+
+  <script src="//apis.google.com/js/platform.js?onload=start"> </script>
   </head>
   <body>
-    <header>
-      <a href='{{url_for('showMainPage')}}'>Back to main page</a>
-      <p>On this page, you'll be able to log in.</p>
-    </header>
-    <section id="login-google">
-      <button>Google button comes here</button>
-    </section>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <h3 class="text-muted">Welcome, {{user_name}}</h3>
+        </nav>
+      </div>
+
+      <div class="jumbotron">
+        <div class="col-md-6 offset-md-3 text-center">
+          <a href='{{url_for('showMainPage')}}'>Back to main page</a><br/><br/>
+          <p>On this page, you can log in with Google.</p><br/>
+
+        <section id="flashMessages">
+          <div class = 'flash'>
+    		      {% with messages = get_flashed_messages() %}
+              {% if messages %}
+              {% for message in messages %}
+                <p> <strong> {{ message }} </strong> </>
+              {% endfor %}
+              {% endif %}
+              {% endwith %}
+          </div>
+        </section>
+        <section id="login-google">
+          <div id="signinButton">
+              <span class="g-signin"
+                data-scope="openid email"
+                data-clientid="1037358407417-r2d2q606nmu2pvc52kbe9e607ea4sbld.apps.googleusercontent.com"
+                data-redirecturi="postmessage"
+                data-accesstype="offline"
+                data-cookiepolicy="single_host_origin"
+                data-callback="signInCallback"
+                data-approvalprompt="force">
+              </span>
+            </div>
+            <div id="result"></div>
+        </section>
+      </div>
+    </div>
+  </div>
+    <script>
+      function signInCallback(authResult) {
+        if (authResult['code']) {
+          // Hide the sign-in button now that the user is authorized
+          $('#signinButton').attr('style', 'display: none');
+          // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+          $.ajax({
+            type: 'POST',
+            url: '/gconnect?state={{STATE}}',
+            processData: false,
+            data: authResult['code'],
+            contentType: 'application/octet-stream; charset=utf-8',
+            success: function(result) {
+              // Handle or verify the server response if necessary.
+              if (result) {
+                $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+               setTimeout(function() {
+                window.location.href = "/";
+               }, 4000);
+
+            } else if (authResult['error']) {
+          console.log('There was an error: ' + authResult['error']);
+        } else {
+              $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+               }
+            }
+
+        }); } }
+    </script>
   </body>
 </html>
