--- a/templates/language.html
+++ b/templates/language.html
@@ -46,7 +46,7 @@
             {% for tip in tips %}
             <div class="card">
               <div class="card-block">{{tip['text']}}</div>
-            </div>
+            </div><br/>
             {% endfor %}
           </div>
           <div class="col-md-6">
