--- a/templates/language-family.html
+++ b/templates/language-family.html
@@ -30,6 +30,17 @@
       </div>
 
       <div class="jumbotron">
+        <section id="flashMessages">
+          <div class = 'flash'>
+              {% with messages = get_flashed_messages() %}
+              {% if messages %}
+              {% for message in messages %}
+                <p> <strong> {{ message }} </strong> </>
+              {% endfor %}
+              {% endif %}
+              {% endwith %}
+          </div>
+        </section>
         <a href='{{url_for('showMainPage')}}'>Back to main page</a>
         <div class="col-md-6 offset-md-3">
           <h1 class="text-center">{{family['description']}}</h1>
@@ -45,7 +56,7 @@
                 {% endfor %}
           </section>
           <section id="options">
-            <div class="dropdown show">
+            <div class="dropdown">
               <a class="btn btn-secondary dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="false" aria-expanded="true">
                 Options
               </a>
